deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-istio-jilf-deployment
  labels:
    app: apiistio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apiistio
  template:
    metadata:
      labels:
        app: apiistio
    spec:
      containers:
      - name: apiistio
        image: caasi81/apikubernetes:v2
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: api-istio-jilf-service
  labels:
    app: api-istio-jilf-service
spec:
  selector:
    app: apiistio
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  sessionAffinity: None
